welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: type mismatch;
 found   : String
 required: Int
for(i<- 0 to getMondeLargeur-2){avance();litMessage()toInt;T2(i)=litMessage;}
                                                                 ^